Fixed home page to work on mobile devices.

--- a/RealtorWebsite/src/app/home/home.component.css
+++ b/RealtorWebsite/src/app/home/home.component.css
@@ -17,6 +17,32 @@
 	width: 100%;
 }
 
+.text-overlay1 {
+	position: absolute;
+	bottom: 50px;
+	left: 0;
+	width: 100%;
+	color: white;
+	font: 24px bold;
+	background: rgba(0,0,0,0.7);
+	padding: 10px;
+}
+
+@media only screen and (max-width: 500px) {
+	.text-overlay1 {
+		position: absolute;
+		top: 150px;
+		left: 0;
+		width: 100%;
+		height: 50px;
+		max-height: 50px;
+		color: white;
+		font: 24px bold;
+		background: rgba(0,0,0,0.7);
+		padding: 10px;
+	}
+}
+
 .text-overlay {
 	position: absolute;
 	bottom: 50px;
